client-assets/client.scss
/* ... */
.btn:hover,
.entry-content button:hover,
.wp-block-button a:hover,
.wp-block-button__link:hover {
	opacity: .8;
}

.where-to-buy>.btn:hover {
	color: $dark;
}

@media only screen and (max-width: 667px) {

	.c9 .c9-cta .wp-block-button__link.c9-button-size-small,
	.c9 .c9-cta .wp-block-button__link.c9-button-size-medium,
	.c9 .c9-cta .wp-block-button__link.c9-button-size-large,
	.c9 .c9-cta .wp-block-button__link.c9-button-size-extralarge {
		font-size: 20px;
	}
}

.bg-primary,
.has-color-orange-background-color {
	background-color: $primary !important;
}

.bg-secondary,
.has-color-yellow-background-color {
	background-color: $secondary !important;
}

.has-color-gray-background-color {
	background-color: $gray-100 !important;
}

.has-color-white-background-color {
	background-color: #fff !important;
}

.has-color-black-background-color {
	background-color: #000 !important;
}

/* tags */
.i-tag,
.tags-links {
	font-size: 1.2em;
	letter-spacing: 0.01em;
	text-transform: uppercase;
	font-weight: normal;
	color: $link-hover-color;
}

.tags-links a {
	text-decoration: none;
	color: $link-color;
}

.i-tag:before,
.tags-links a:before {
	display: inline;
	content: "\f02b";
	font: normal normal normal 1.4rem/1 FontAwesome;
	color: $primary;
	padding-right: 4px;
}

.tags-links a:hover {
	color: $dark;
}

/****************************************************************************************/
/* Client navbar */
/****************************************************************************************/

#wrapper-navbar {
	z-index: 1020;
}

.header-navbar .navbar {
	background-color: transparent;
}

.header-navbar .navbar-small,
.blog .header-navbar,
.archive .header-navbar,
.single-post .header-navbar,
.error404 .header-navbar,
.search .header-navbar {
	background-color: $dark;
}

.header-navbar .navbar.navbar-small {
	max-height: 55px;
	height: 55px;
	-webkit-transition: opacity 0.4s ease-in-out;
	transition: opacity 0.4s ease-in-out;
	background-color: $light;
}

.navbar-small {
	max-height: 55px;
	height: 55px;
	-webkit-transition: opacity 0.4s ease-in-out;
	transition: opacity 0.4s ease-in-out;
	background-color: $light;
}

.navbar-small .navbar-brand img {
	max-height: 45px;
	width: auto;
}

.navbar-nav li a,
.header-navbar .navbar-small .nav .nav-item>.nav-link {
	text-transform: uppercase;
	font-size: 1.5em;
	line-height: 1;
	color: rgba(43, 43, 43, 0.77);
	letter-spacing: 1px;
}

.c9 .dropdown-toggle:after {
	border-top: none;
	border-right: none;
	border-bottom: none;
	border-left: none;
}


@media only screen and (min-width: 1px) {
	.header-navbar {
		height: 55px;
	}

	.navbar-brand img {
		width: auto;
		max-height: 45px;
		height: auto;
	}

	#page .navbar-small-mobile {
		padding-bottom: 0px;
	}

	.dark-brand {
		display: none;
	}

	/* needs to change to theme setting */
	.navbar-small .dark-brand {
		max-width: 285px;
		max-height: 45px;
		width: auto;
		height: auto;
		position: absolute;
		display: inline;
	}

	.navbar .navbar-brand {
		position: relative;
	}

	.navbar-small .navbar-brand .c9-work-light {
		opacity: 0;
		display: none;
	}

	.navbar .container-fluid .navbar-small-buttons {
		-webkit-box-pack: end;
		justify-content: flex-end;
	}

}

@media only screen and (max-width: 667px) {
	.navbar .container-fluid {
		-webkit-box-pack: end;
		justify-content: space-between;
		-webkit-box-orient: horizontal;
		-webkit-box-direction: normal;
		flex-direction: row;
	}

	.navbar .container-fluid .c9-custom-logo {
		align-self: flex-start;
	}

	.navbar .container-fluid .navbar-small-buttons {
		margin-left: auto;
	}

	#mega-menu-wrap-primary {
		margin-left: 0px;
	}

	.nav-search .btn-nav-search,
	.navbar-toggler {
		color: $dark;
		margin: 0px;
		padding: 5px;
	}

}

@media only screen and (min-width: 668px) and (max-width: 991px) {

	.navbar-toggler {
		color: #fff;
	}

	.navbar-small .btn-nav-search,
	.navbar-small .navbar-toggler {
		color: $dark;
	}

	.nav-search-icon {
		display: none !important;
	}

}

@media only screen and (min-width: 768px) {
	.navbar-brand img {
		max-width: 285px;
		max-height: 92px;
		width: auto;
		height: auto;
	}

	#mega-menu-wrap-primary {
		display: -webkit-box;
		display: flex;
		-webkit-box-pack: center;
		justify-content: center;
	}

	.navbar-nav,
	#mega-menu-wrap-primary #mega-menu-primary {
		display: -webkit-box;
		display: flex;
		-webkit-box-pack: justify;
		justify-content: space-between;
		margin-left: auto;
	}

	.header-navbar {
		height: 115px;
	}

	.navbar-nav>li>a {
		color: #fff;
	}
}

@media only screen and (min-width: 992px) {
	#mega-menu-wrap-primary {
		width: 100%;
	}

	.navbar-nav,
	#mega-menu-wrap-primary #mega-menu-primary {
		min-width: 80%;
	}
}

/****************************************************************************************/
/* header navbar search customizations */
/****************************************************************************************/
.c9 #mega-menu-wrap-primary #mega-menu-primary li.search.nav-item,
.header-navbar .search.nav-item {
	display: none;
}

@media only screen and (min-width: 768px) {

	.nav-search,
	.nav-toggle {
		line-height: 2;
	}

	.nav-search {
		display: none;
	}

}

.nav-search {
	margin-right: 10px;
}

.header-navbar .search,
.c9 #mega-menu-wrap-primary #mega-menu-primary li.search {
	min-width: 125px;
	display: -webkit-box;
	display: flex;
	font-size: 10px;
	-webkit-box-align: center;
	align-items: center;
	-webkit-box-pack: start;
	justify-content: flex-start;
}

@media only screen and (max-width: 667px) {

	.c9 #mega-menu-wrap-primary #mega-menu-primary li.search,
	.header-navbar .search {
		display: none;
	}
}

.header-navbar .nav-search .btn-nav-search {
	font-size: 20px;
}

.search form {
	display: inline;
}

.c9 .header-navbar .search input:focus {
	outline: 0;
}
/* ... */

